# Computational_Mathematics_2_course

./: README.md  pyproject.toml
CM_Lab2/: main.py  pyproject.toml
CM_Lab3/: Exceptions.py  draw_func.py  function.py  main.py  pyproject.toml  simpson_method.py
CM_Lab4/: draw.py  main.py  pyproject.toml  tools.py
CM_Lab5/: lab_4.py  main.py  matrix.py  milne_method.py  pyproject.toml
CM_lab1/: for_presentation.py  matrix.py  my_tests.py  solve_matrix.py
CM_lab1/tests/: test_1x1.py  test_20x20.py  test_3x3.py  test_4x3.py  test_no_solution_4x3.py
