[tool.poetry]
name = "cm_lab3"
version = "0.1.0"
description = ""
authors = ["evgeniy <Evgexac@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.0"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
