[tool.poetry]
name = "cm_lab5"
version = "0.1.0"
description = ""
authors = ["evgeniy <Evgexac@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
sympy = "^1.11.1"
matplotlib = "^3.7.1"
black = "^23.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
